Fixed sidebar width bug using min-width.  Fixed jump jets tab bug related to spaces instead of dashes in the tab ID

--- a/planner.css
+++ b/planner.css
@@ -16,7 +16,7 @@
 .sidebar {
   border-color: black;
   border-style: solid;
-  width: 150px;
+  min-width: 150px;
   background-color: grey;
   font-size: 300%;
   line-height: 50px;
